<resources>
    <string name="app_name">SumoRobot</string>
    <string name="username_text">username</string>
    <string name="email_text">email</string>
    <string name="teams_text">Teams</string>
    <string name="address_text">address</string>
    <string name="city_text">city</string>
    <string name="state_text">state</string>
    <string name="zip_text">zip</string>
    <string name="team_name_text2">Team Name2</string>
    <string name="add_button_text">Add</string>
    <string name="delete_member_text">Delete</string>
    <string name="name_text">Enter Member\'s Name</string>
    <string name="add_members_menu_text">add members</string>
    <string name="enter_member_name_text">New Name</string>
    <string name="back_menu_text">Back</string>
    <string name="email_text_hint">Email</string>
    <string name="password_text_hint">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="team_name_text">Team Name</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="home" />
    <string name="home_menu_button_text">Home</string>
    <string name="logout_menu_text">Logout</string>
    <string name="newTeamNameHint">Team Name</string>
    <string name="newAddressHint">Address</string>
    <string name="newStateHint">State</string>
    <string name="newZipHint">Zip Code</string>
    <string name="newCityHint">City</string>
    <string name="createteambutton">Create Team</string>
    <string name="submitbuttontext">Submit</string>
    <string name="attentionText">Attention: You MUST be an organizer to log on!</string>
    <string name="addMembertoggle">Add Member</string>
    <string name="add_menu_text">Add Member</string>
    <string name="addMember_buttontext">Add</string>
    <string name="teamnameTextView">Team Name</string>
    <string name="teamnameactualTextView">teamname</string>
    <string name="newMemberNameEditText">New Member\'s Name</string>
    <string name="teammembertextfile">These are your current members</string>
    <string name="verifyEmailText">Enter Your Email</string>
</resources>
