<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.my627.sumorobot.MainActivity">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/username_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usernameTextView"
        android:layout_below="@+id/usernameTextView"
        android:layout_marginTop="35dp"
        android:text="@string/email_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/teamsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/createTeamButton"
        android:layout_marginStart="53dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:elevation="14dp"
        android:text="@string/teams_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/createTeamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:elevation="14dp"
        android:text="@string/createteambutton"
        android:textStyle="bold"
        tools:text="Create Team" />

</RelativeLayout>
